# ironchat

./: README.md  test_jailbreaks.py
backend/: eval_results.json  golden_rule_test.ipynb  golden_set.json  golden_set.txt  ironchat_info.txt  learn_rag.ipynb  main.py  practice.ipynb  pyproject.toml  requirements.txt  scratch_print_chunks.py  test_auth.py  test_error.py
backend/.ipynb_checkpoints/: golden_rule_test-checkpoint.ipynb  learn_rag-checkpoint.ipynb  practice-checkpoint.ipynb
backend/alembic/: env.py
backend/alembic/versions/: 20260709_0001_create_chat_tables.py
backend/app/: exceptions.py
backend/app/api/: dependencies.py
backend/app/core/: config.py  database.py  jina.py  qdrant.py  security.py  supabase.py  voyage.py
backend/app/db/: database.py  models.py  redis.py
backend/app/models/: __init__.py  base.py  chat.py  file_uploads.py  message.py  oauth_account.py  refresh_token.py  user.py
backend/app/repositories/: auth.py  chat.py  file_upload.py  message.py
backend/app/schemas/: auth.py  chat.py  file_upload.py  message.py
backend/app/services/: auth.py  chat.py  file_upload.py  message.py
backend/app/utils/: eval.py  exceptions.py  files_read.py  golden_set_testing.py  metrics.py  one.docx  pdf_read.py  report.py
backend/migrations/: env.py
backend/migrations/versions/: 2db9759a7588_add_auth_provider_column.py  9e67cbc2dd0a_add_documents_table.py  a3ed706c4846_create_document_table.py  a8a1a32d7a8d_changed_models.py  b2871f814127_added_chat_and_messages_models.py  d3c767bd56fc_add_document_mode.py  ddc1630b9f4c_initial_commit.py  (+1 more)
(+45 files in other folders)
