[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "authlib>=1.7.2",
    "fastapi>=0.139.0",
    "greenlet>=3.5.3",
    "groq>=1.5.0",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "langchain>=1.3.14",
    "langchain-community>=0.4.2",
    "nest-asyncio>=1.6.0",
    "pwdlib[argon2]>=0.3.0",
    "pydantic-settings>=2.14.2",
    "pydantic[email]>=2.13.4",
    "pyjwt>=2.13.0",
    "pypdf>=6.14.2",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.32",
    "qdrant-client>=1.18.0",
    "scalar-fastapi>=1.8.2",
    "sqlalchemy>=2.0.51",
    "sqlmodel>=0.0.39",
    "supabase>=2.31.0",
    "tavily-python>=0.7.26",
    "uvicorn[standard]>=0.51.0",
    "voyageai>=0.5.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.21",
]
